--- a/src/index.ejs
+++ b/src/index.ejs
@@ -65,7 +65,8 @@
       "imports": {
         "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
         "react": "https://unpkg.com/react@17/umd/react.production.min.js",
-        "react-dom": "https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"
+        "react-dom": "https://unpkg.com/react-dom@17/umd/react-dom.production.min.js",
+        "axios": "https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
       }
     }
   </script>
